src/snapshots/tat__app__test__type_5_to_jump_to_line.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                                              nogeom                                               ▲"
"                                                                                                   ║"
"Feature   │text_field                                   i32_field                                  █"
"1         │text                                         10                                         █"
"2         │buzz                                         374                                        █"
"3         │check                                        173                                        █"
"4         │die                                          681                                        █"
"5         │participate                                  967                                        █"
"6         │huge                                         980                                        █"
"7         │read                                         295                                        █"
"8         │check                                        894                                        █"
"9         │strive                                       841                                        █"
"10        │strive                                       729                                        █"
"11        │fall                                         456                                        █"
"12        │participate                                  595                                        █"
"13        │study                                        518                                        █"
"14        │respect                                      577                                        █"
"15        │die                                          434                                        █"
"16        │verify                                                                                  █"
"17        │study          ╭────────────── Jump To Feature ───────────────╮                         █"
"18        │verify         │5                                             │                         █"
"19        │verify         ╰───── <press Enter to jump, q to cancel> ─────╯                         █"
"20        │murky                                                                                   █"
"21        │arrest                                       670                                        █"
"22        │participate                                  261                                        ║"
"23        │loving                                       615                                        ║"
"24        │breath                                       873                                        ║"
"25        │breath                                       507                                        ║"
"26        │read                                         134                                        ║"
"27        │breath                                       177                                        ║"
"28        │participate                                  400                                        ║"
"29        │tremble                                      -7                                         ║"
"30        │study                                        873                                        ║"
"31        │raspy                                        842                                        ║"
"32        │current                                      323                                        ║"
"33        │bloody                                       418                                        ║"
"34        │murky                                        918                                        ║"
"35        │current                                      212                                        ║"
"────────────────────────────────────── <type ? to show help> ──────────────────────────────────────▼"
"◄████████████████████████████████████████████████████████████████████████████████████████████══════►"
